--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -5,12 +5,12 @@ about:
   about_item :
   - icon : ti-ruler-pencil # themify icon pack : https://themify.me/themify-icons
     title : We're Creative
-    content : We place great importance on creativity and use tools that allow us to bring an experience of ease of use with attractive interfaces in each of our designs.
+    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
 
   - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
     title : We're Professional
-    content : Our mission is to talk from Professional to Professional, because we know the business issues, we accompany you in your digital project.
+    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
 
   - icon : ti-thought # themify icon pack : https://themify.me/themify-icons
-    title : We're Ingenious
-    content : Being flexible and adapting to different projects, using new technologies, allows us to evolve in a constantly changing environment in the realization of projects.
+    title : We're Genius
+    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
