--- a/exampleSite/data/fr/contact.yml
+++ b/exampleSite/data/fr/contact.yml
@@ -1,31 +1,31 @@
 ############################## Contact #############################
 contact:
   enable : true
-  title : Contacter Nous
-  subtitle : Coordonnées de contact
-  content : Nous sommes originaires de la région toulousaine où nous avons fait nos armes, nous attachons de l'importance à la proximité, nous nous déplaçons souvent pour rencontrer nos clients, et travaillons donc au-delà de nos frontières.  
+  title : Contact Us
+  subtitle : Contact Details
+  content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci.
 
   # Contact details
   contact_list:
     - icon : ti-location-pin # themify icon pack : https://themify.me/themify-icons
-      info : "Toulouse, Paris, Bordeaux"
+      info : "Khaja Road, Bayzid, Chittagong, Bangladesh"
       
     - icon : ti-mobile # themify icon pack : https://themify.me/themify-icons
-      info : "Téléphone: +33 (6) 12 49 64 82"
+      info : "Phone: +880-31-000-000"
       
-    # - icon : ti-printer # themify icon pack : https://themify.me/themify-icons
-    #   info : "Fax: +880-31-000-000"
+    - icon : ti-printer # themify icon pack : https://themify.me/themify-icons
+      info : "Fax: +880-31-000-000"
       
     - icon : ti-email # themify icon pack : https://themify.me/themify-icons
-      info : "Email: david.bailly@lcdigitale.fr"
+      info : "Email: hello@meghna.com"
 
 
   # Contact form
   contact_form:
     enable : true
-    form_action : "https://formspree.io/f/mayllnpk" #contact form works with https://formspree.io
+    form_action : "#" #contact form works with https://formspree.io
     name : "votre nom"
     email : "Votre email"
-    subject : "Sujet"
+    subject : "Matière"
     message : "Message"
     submit : "Soumettre"
