--- a/exampleSite/data/en/pricing.yml
+++ b/exampleSite/data/en/pricing.yml
@@ -2,88 +2,63 @@
 pricing:
   enable : true
   title : Our Plans
-  soustitle : We offer you a wide range of controlled services
   pricing_table :
     # pricing table loop
-    - name : STANDARD WEBSITE
-      description : START 
-      price : 1090€*
-      # unit : month
+    - name : Free
+      price : $99
+      unit : month
       services:
-        - Developed under CMS    
-        - Pre-defined model
-        - Selection of a color palette
-        - Domain | Hosting | E-mail 
-        - Administrator Interface
-        - 100% responsive site
-        - Setting up the content
-        - Contact Form
-        - Social network sharing links
-        - Optimization of referencing
-        - Visit statistics
-        - Putting on line of the site
-        - Training on how to use the site
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Custom Pricing"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
       
     # pricing table loop
-    - name : CUSTOMIZED SHOWCASE SITE
-      description : START 
-      price : 1590€*
-      # unit : month
+    - name : Silver
+      price : $149
+      unit : month
       services:
-        - Tailor-made development 
-        - Personalized graphic charter
-        - Logo proposal
-        - Domain | Hosting | E-mail 
-        - Administrator Interface
-        - 100% responsive site
-        - Setting up the content
-        - Contact form & Map
-        - Social network sharing links
-        - Optimization of referencing
-        - Visit statistics
-        - Putting on line of the site
-        - Training on how to use the site
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Custom Pricing"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
         
     # pricing table loop
-    - name :  E-COMMERCE PLATFORM
-      description : START 
-      price : 2090€*
-      # unit : month
+    - name : Gold
+      price : $199
+      unit : month
       services:
-        - Developed under CMS or CUSTOM
-        - Severless Or Plugins
-        - Graphic Chart | Logo
-        - Domain | Hosting | E-mail 
-        - Administrator Interface
-        - 100% responsive site
-        - Setting up the content
-        - Contact form & Map
-        - Social network sharing links
-        - Optimization of referencing
-        - Visit statistics
-        - Putting on line of the site
-        - Training on how to use the site
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Custom Pricing"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
         
     # pricing table loop
-    - name : CUSTOMIZED SHOWCASE SITE
-      description : START 
-      price : 300€*
-      unit : /Ye**
+    - name : Platinum
+      price : $299
+      unit : month
       services:
-        - Website updates
-        - Small graphic or content modifications
-        - Monthly outsourced backups
-        - Performance optimization
-        - Restoration in case of hacking
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Contact"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
