--- a/exampleSite/data/fr/pricing.yml
+++ b/exampleSite/data/fr/pricing.yml
@@ -1,91 +1,64 @@
 ##################################### pricing ##############################
 pricing:
   enable : true
-  title : Nos tarifs
-  soustitle: Nous vous proposons un large panel de prestations maîtrisées
+  title : Our Plans
   pricing_table :
     # pricing table loop
-    - name : SITE VITRINE STANDART
-      description : À PARTIR DE
-      price : 1090€*
-      #unit : month
+    - name : Free
+      price : $99
+      unit : month
       services:
-        
-        - Développé sous CMS    
-        - Maquette pré-définie
-        - Sélection d'une palette de couleur
-        - Domaine | Hébergement | E-mail 
-        - Interface Administrateur
-        - Site responsive 100%
-        - Mise en place du contenu
-        - Formulaire de contact
-        - Liens de partage réseaux sociaux
-        - Optimisation du référencement
-        - Statistiques de visite
-        - Mise en ligne du site
-        - Formation utilisation du site
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Demander Un Devis"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
       
     # pricing table loop
-    - name : SITE VITRINE PERSONNALISÉ
-      description : À PARTIR DE
-      price : 1590€*
-     # unit : month
+    - name : Silver
+      price : $149
+      unit : month
       services:
-        - Développé SUR-MESURE 
-        - Charte graphique personnalisée
-        - Proposition de logo
-        - Domaine | Hébergement | E-mail 
-        - Interface Administrateur
-        - Site responsive 100%
-        - Mise en place du contenu
-        - Formulaire de contact & Map
-        - Liens de partage réseaux sociaux
-        - Optimisation du référencement
-        - Statistiques de visite
-        - Mise en ligne du site
-        - Formation utilisation du site
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Demander Un Devis"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
         
     # pricing table loop
-    - name : SITE | PLATEFORME E-COMMERCE
-      description : À PARTIR DE
-      price : 2090€*
-      #unit : month
+    - name : Gold
+      price : $199
+      unit : month
       services:
-        - Développé sous CMS ou SUR-MESURE
-        - Severless Ou Plugins
-        - Charte Graphique | Logo
-        - Domaine | Hébergement | E-mail 
-        - Interface Administrateur
-        - Site responsive 100%
-        - Mise en place du contenu
-        - Formulaire de contact & Map
-        - Liens de partage réseaux sociaux
-        - Optimisation du référencement
-        - Statistiques de visite
-        - Mise en ligne du site
-        - Formation utilisation du site
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Demander Un Devis"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
         
     # pricing table loop
-    - name : FORFAIT MAINTENANCE
-      description : 30 €/Heure
-      price : 300€
-      unit : /AN****
+    - name : Platinum
+      price : $299
+      unit : month
       services:
-        - Mises à jour site internet
-        - Petites modifications graphiques ou de contenu
-        - Sauvegardes externalisées mensuelles
-        - Optimisation performances
-        - Restauration en cas de piratage
-       
+        - 1GB Disk Space
+        - 10 Email Account
+        - Script Installer
+        - 1 GB Storage
+        - 10 GB Bandwidth
+        - 24/7 Tech Support
       button:
-        label : "Contact"
-        link : "#contact"
+        label : "Signup"
+        link : "#"
