--- a/exampleSite/data/en/cta.yml
+++ b/exampleSite/data/en/cta.yml
@@ -1,10 +1,10 @@
 ############################# call to action ##############################
 cta:
   enable : true
-  bg_image : "images/backgrounds/bg-white-wall.jpg"
-  bg_image_webp : "images/backgrounds/bg-white-wall.webp"
-  title : "Great Design & Incredible Features"
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? Omnis accusantium ea reiciendis, fugit commodi nostrum."
+  bg_image : "images/backgrounds/bg-cta.jpg"
+  bg_image_webp : "images/backgrounds/bg-cta.webp"
+  title : "Reliable codebase & Incredible Features"
+  content : "The key to maintenance and reliability is well thought out code design."
   button:
     enable : true
     label : "Start a project with us"
