--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -61,10 +61,10 @@ name = "team"
 url = "#team"
 weight = 4
 
-[[Languages.en.menu.main]]
-name = "pricing"
-url = "#pricing"
-weight = 5
+# [[Languages.en.menu.main]]
+# name = "pricing"
+# url = "#pricing"
+# weight = 5
 
 [[Languages.en.menu.main]]
 name = "blog"
