removed and fixed typos

--- a/exampleSite/data/en/feature.yml
+++ b/exampleSite/data/en/feature.yml
@@ -9,20 +9,20 @@ feature:
   - title: 1. Custom Software Development Team
     icon: ti-world
     content: |-
-      We are specialized in setting up a dedicated software development team for your projects at our offices. We take care of the general management of the team and provide the necessary equipment and tools. And you and your team can take care of the daily technical management of the team members.+ Your fixed and own dedicated team of experienced software developers working as an extended team of your company.
+      We are specialized in setting up a dedicated software development team for your projects at our offices. We take care of the general management of the team and provide the necessary equipment and tools. And you and your team can take care of the daily technical management of the team members. Your fixed and own dedicated team of experienced software developers working as an extended team of your company.
       – Enough work for the team needs to be available continuously to make this way of working efficient. Although flexible up/down scaling is provided
   - title: 2. Vouchers
     icon: ti-panel
     content: |-
-      Vouchers for certain amounts of development hours per month can be purchased. Vouchers of 80, 120 or 160 hours are possible. Vouchers are paid upfront before the start of each month.+ The amount of software development hours is committed by Manifera for the month it is purchased.
+      Vouchers for certain amounts of development hours per month can be purchased. Vouchers of 80, 120 or 160 hours are possible. Vouchers are paid upfront before the start of each month. The amount of software development hours is committed by Paisley for the month it is purchased.
       – It might not always be possible to indicate the amount of development hours needed per month.
   - title: 3. Time and Materials
     icon: ti-stats-up
     content: |2-
-       The budget required is based on actual spent development effort and ‘materials’ costs (like software libraries). During the quotation stage, we will provide you with an indicative expected budget based upon your ideas and requirements. You might want to use this engagement form when the requirements of your application are not fully clear yet.+ You only pay for the real hours spent and ‘materials’ used.
+       The budget required is based on actual spent development effort and ‘materials’ costs (like software libraries). During the quotation stage, we will provide you with an indicative expected budget based upon your ideas and requirements. You might want to use this engagement form when the requirements of your application are not fully clear yet. You only pay for the real hours spent and ‘materials’ used.
       – Even though we provide you with an indicative expected budget, the actual required budget might be significantly different from that.
   - title: 4. Fixed price project
     icon: ti-announcement
     content: |-
-      Based on your ideas and requirements we provide you with the budget estimate and the planning. As the name ‘Fixed Price’ implies both this budget and the planning stay fixed (if the requirements do not change significantly). The budget will be paid in parts linked to mutually agreed milestones.+ Budget related risk is out of your hands since the price will be as agreed upon.
+      Based on your ideas and requirements we provide you with the budget estimate and the planning. As the name ‘Fixed Price’ implies both this budget and the planning stay fixed (if the requirements do not change significantly). The budget will be paid in parts linked to mutually agreed milestones. Budget related risk is out of your hands since the price will be as agreed upon.
       – Normally this comes with a higher price as to cater for unforeseen activities.As a flexible company, it is possible to deviate from the above indicated engagement models. Tell us your ideas about engagement and we are more than happy to discuss further on this.
