--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -49,9 +49,9 @@ url = "about"
 weight = 1
 
 [[Languages.en.menu.main]]
-name = "services"
+name = "application"
 pre = "#"
-url = "services"
+url = "application"
 weight = 2
 
 [[Languages.en.menu.main]]
